Edited initial textarea contents to hint the requirement of PHP-tags in the textarea

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -11,7 +11,9 @@
                 <p><strong>PHPHint</strong> is a quick and easy tool that analyzes your PHP code and looks for potential errors, lack of <a href="http://paul-m-jones.com/archives/2420">best practices</a> and <a href="http://en.wikipedia.org/wiki/Code_smell">code smell</a>. It also allows you to clean your code <em>automagically</em>.</p>
             </div>
 
-            <textarea id="code" name="code">// Your code here</textarea>
+            <textarea id="code" name="code">&lt;?php
+// Your code here
+</textarea>
 
             <div class="toolbar">
                 <input type="button" id="analyze" value="Analyze" class="btn primary" />
